Fix alignment & mobile layout

--- a/packages/dx-site/src/components/landing/product-block.module.scss
+++ b/packages/dx-site/src/components/landing/product-block.module.scss
@@ -31,3 +31,9 @@
 .react {
   background-color: rgb(89, 208, 240);
 }
+
+@media screen and (max-width: 1024px) {
+  .productBlock {
+    margin-bottom: 20px;
+  }
+}
